--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "${POSTGRES_HOST_PORT}:5432" # avoid opsboard's 5432
+      - "${POSTGRES_HOST_PORT}:5432" 
     volumes:
       - workout_pgdata:/var/lib/postgresql/data
     networks:
@@ -25,7 +25,7 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - "${PGADMIN_HOST_PORT}:80" # avoid opsboard's 5050
+      - "${PGADMIN_HOST_PORT}:80" 
     depends_on:
       - postgres
     networks:
@@ -43,7 +43,7 @@ services:
     volumes:
       - .:/app
     ports:
-      - "${DJANGO_HOST_PORT}:8000" # avoid opsboard's 8001
+      - "${DJANGO_HOST_PORT}:8000"
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
