--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Django>=5.0,<6.0
 django-cors-headers>=4.0,
 django-filter>=24.3,<25.0,
 djangorestframework>=3.15,<4.0
-psycopg[binary]>=3.1
-django-cors-headers
+psycopg[binary]>=3.1,
+django-extensions==3.2.3
